--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "u": "^0.1.0",
     "uid": "^2.0.2",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
